Part 2 with Knex

--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -12,32 +12,32 @@
         <div class="back">
             <div class="row">
                 <div class="col">
-                    <a class="btn" href="/products">< </a>&nbsp;<span class="back-product-name"><strong>Product 1</strong></span>
+                    <a class="btn" href="/shops/<%= product.shop_id %>">< </a>&nbsp;<span class="back-product-name"><strong><%= product.name %></strong></span>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="https://placehold.it/300x300">
+                    <img src="<%= product.image %>">
                 </div>
                 <div class="col-md-8">
                     <div class="product-desc">
-                        <h1>Product Name</h1>
-                        <p>Description</p>
+                        <h1><%= product.name %></h1>
+                        <p><%= product.description %></p>
                     </div>
                     <div class="product-action">
                         <div class="row">
                             <div class="col">
                                 <div class="button-group">
                                     <button id="minus">-</button>
-                                    <input type="number" value="1" min="1" readonly id="qty">
+                                    <input type="number" value="1" min="1" maxlength="<%= product.qty %>" readonly id="qty">
                                     <button id="plus">+</button>
                                 </div>
                             </div>
                             <div class="col">
-                                <h5>PRICE 10000</h5>
-                                <a href="/checkout" class="btn btn-danger">BUY</a>
+                                <h5>PRICE <%= product.price %></h5>
+                                <a href="/checkout/<%= product.shop_id %>/<%= product.id %>" id="buy" class="btn btn-danger">BUY</a>
                             </div>
                         </div>
                     </div>
