--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -10,25 +10,31 @@
     <div class="content">
         <%- include('common/nav.ejs') %>
         <div class="container">
-            <form>
+            <form action="/checkout" method="POST">
+                <input type="hidden" name="product_id" value="<%= product.id %>">
+                <input type="hidden" name="qty" value="<%= qty %>">
                 <div class="form-group">
                   <label for="cardName">Card Name</label>
-                  <input type="text" class="form-control" id="cardName" aria-describedby="emailHelp">
+                  <input type="text" class="form-control" id="cardName" name="fullname" aria-describedby="emailHelp">
                   <small id="cardNameHelp" class="form-text text-muted">We'll never share your card name detail with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="cardNumber">Card Number</label>
-                    <input type="text" class="form-control" id="cardNumber" aria-describedby="emailHelp">
+                    <input type="text" class="form-control" id="cardNumber" name="cardno" aria-describedby="emailHelp">
                     <small id="cardNumberHelp" class="form-text text-muted">We'll never share your card name detail with anyone else.</small>
                   </div>
                   <div class="form-group">
                     <label for="cardExpiry">Card Expiry</label>
-                    <input type="text" class="form-control" id="cardExpiry" aria-describedby="emailHelp">
+                    <input type="text" class="form-control" id="cardExpiry" name="cardexp" aria-describedby="emailHelp">
                     <small id="cardExpiryHelp" class="form-text text-muted">We'll never share your card name detail with anyone else.</small>
                   </div>
                   <div class="form-group">
                     <label for="cardCVV">Card CVV</label>
-                    <input type="password" maxlength="3" class="form-control" id="cardCVV" aria-describedby="emailHelp">
+                    <input type="password" maxlength="3" class="form-control" name="cvv" id="cardCVV" aria-describedby="emailHelp">
+                  </div>
+                  <div class="form-group">
+                    <label for="cardAddress">Address</label>
+                    <input type="text" class="form-control" name="address" id="cardAddress" aria-describedby="emailHelp">
                   </div>
                 <button type="submit" class="btn btn-primary">Pay</button>
               </form>
